--- a/Journal App - Core Data/Journal App - Core Data/Base.lproj/Main.storyboard
+++ b/Journal App - Core Data/Journal App - Core Data/Base.lproj/Main.storyboard
@@ -99,8 +99,15 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="I2S-FE-dT7">
                                 <rect key="frame" x="12" y="128" width="351" height="439"/>
                                 <subviews>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="pSw-MK-aZP">
+                                        <rect key="frame" x="0.0" y="0.0" width="351" height="1"/>
+                                        <segments>
+                                            <segment title="First"/>
+                                            <segment title="Second"/>
+                                        </segments>
+                                    </segmentedControl>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="c1R-pM-fCD">
-                                        <rect key="frame" x="0.0" y="0.0" width="351" height="30"/>
+                                        <rect key="frame" x="0.0" y="8" width="351" height="22"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
