--- a/Journal App - Core Data/Journal App - Core Data/Base.lproj/Main.storyboard
+++ b/Journal App - Core Data/Journal App - Core Data/Base.lproj/Main.storyboard
@@ -96,24 +96,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="I2S-FE-dT7">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="I2S-FE-dT7">
                                 <rect key="frame" x="12" y="128" width="351" height="439"/>
                                 <subviews>
-                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="pSw-MK-aZP">
-                                        <rect key="frame" x="0.0" y="0.0" width="351" height="1"/>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="pSw-MK-aZP">
+                                        <rect key="frame" x="0.0" y="0.0" width="351" height="29"/>
                                         <segments>
-                                            <segment title="First"/>
-                                            <segment title="Second"/>
+                                            <segment title="🤩"/>
+                                            <segment title="😐"/>
+                                            <segment title="😭"/>
                                         </segments>
                                     </segmentedControl>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="c1R-pM-fCD">
-                                        <rect key="frame" x="0.0" y="8" width="351" height="22"/>
+                                        <rect key="frame" x="0.0" y="36" width="351" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ttp-W2-pSv">
-                                        <rect key="frame" x="0.0" y="38" width="351" height="401"/>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ttp-W2-pSv">
+                                        <rect key="frame" x="0.0" y="74" width="351" height="365"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -139,6 +140,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="bodyOutlet" destination="ttp-W2-pSv" id="jYJ-IH-LvM"/>
+                        <outlet property="moodSegmentedControl" destination="pSw-MK-aZP" id="EQ2-YX-ETG"/>
                         <outlet property="titleOutlet" destination="c1R-pM-fCD" id="ukr-J5-PHR"/>
                     </connections>
                 </viewController>
